# R3-Bench

./: .gitignore  README.md  requirements.txt  setup.py
R3-Refiner/: LICENSE  README.md  pyproject.toml  requirements.txt
R3-Refiner/distributed_services/clients/: api_client.py
R3-Refiner/distributed_services/config/: config.yaml  load_config.py  service_endpoints.example.env  verl_config.yaml
R3-Refiner/distributed_services/sam3_deps/: README.md  __init__.py  merge_metadata.py  metadata_loader.py  requirements.txt  sam3_detector.py  sam3_reward.py  score_calculator.py
R3-Refiner/distributed_services/scripts/: deploy_services.sh  ray.sh  start_bagel_simple.sh  start_qwen_simple.sh  train_llava_onevision.sh  train_quick.sh
R3-Refiner/distributed_services/servers/: bagel_edit_server.py  clip_reward_server.py  qwen_image_edit_server.py  sam3_reward_server.py  self_reward_qwen2_5vl_server.py  self_reward_qwen3vl_server.py
R3-Refiner/docs/: SERVICES.md
R3-Refiner/examples/data/: README.md  demo_train.json
R3-Refiner/examples/format_prompt/: llava_ov_edit.jinja  refiner_edit.jinja
R3-Refiner/examples/reward_function/: self_reward_staged_reward_api.py  self_reward_staged_reward_api_llava.py
R3-Refiner/tools/: diagnose_training_runtime.py  model_merger.py  view_demo_data.py
R3-Refiner/verl/: __init__.py  protocol.py
R3-Refiner/verl/models/: monkey_patch.py
R3-Refiner/verl/trainer/: config.py  core_algos.py  data_loader.py  main.py  metrics.py  ray_trainer.py
R3-Refiner/verl/utils/: dataset.py  flops_counter.py  fsdp_utils.py  model_utils.py  ulysses.py  (+5 more)
(+87 files in other folders)
